完成了日记的编辑器

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.3.0"
   },
   "dependencies": {
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "marked": "^15.0.11"
   }
 }
